[package]
name = "ergo-rustkit"
version = "0.0.1"
edition = "2021"
description = "A SDK for building applications on the Ergo blockchain"
documentation = "https://docs.rs/ergo-rustkit"
repository = "https://github.com/rust-ergo/ergo-rustkit"
readme = "README.md"
homepage = "https://github.com/rust-ergo"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
