[package]
name = "ergo-rustkit"
version = "0.3.0"
edition = "2021"
description = "A SDK for building applications on the Ergo blockchain"
documentation = "https://docs.rs/ergo-rustkit"
repository = "https://github.com/rust-ergo/ergo-rustkit"
readme = "README.md"
homepage = "https://github.com/rust-ergo"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ergo-lib = "0.20.0"
ergotree-ir = "0.20.0"
ergo-chain-types = "0.7.0"

ergo-rustkit-endpoints = "0.1.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

base16 = "0.2.1"
base64 = "0.13.0"
base58 = "0.2.0"
hex = "0.4.3"

reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0.32"