[package]
name = "ergo-rustkit-endpoints"
version = "0.1.3"
edition = "2021"
description = "A SDK for retreiving information from the Ergo blockchain"
documentation = "https://docs.rs/ergo-rustkit-endpoints"
repository = "https://github.com/rust-ergo/rustkit-endpoints"
readme = "README.md"
homepage = "https://github.com/rust-ergo"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ergo-lib = "0.20.0"
ergo-chain-types = "0.7.0"

serde_json = "1.0"

reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0.32"